--- a/Front/ProEventos-App/src/styles.scss
+++ b/Front/ProEventos-App/src/styles.scss
@@ -8,3 +8,6 @@
 
 /* Importing Fontawesome SCSS file. */
 @import '../node_modules/@fortawesome/fontawesome-free/css/all.min.css';
+
+/* Importing Bootstrap SCSS file.
+@import "~bootstrap/scss/bootstrap"; */
